tests/paczka1/small_fuzzy/65806965.err
Error in line 1: qVKnVkU0tM A643 26,2
Error in line 6: qVKnVkU0tM A989 84,3
